# AIdroponics

./: .gitignore  CLAUDE.md  First Run Output.txt  Fourth Run Output.txt  GENERATION_PROGRESS.md  LICENSE  PROJECT_UPDATE_PROGRESS.md  README.md  Second Run Output.txt  Third Run Output.txt  hydroponics_amazon_list.html  hydroponics_final_claude_code_prompt.md
.claude/: settings.local.json
docker/: Dockerfile  entrypoint.sh
docs/: architecture.md  calibration_guide.md  scaling_guide.md  wiring_diagram.md
hydroponics_ws/src/esp32_firmware/: README.md  platformio.ini
hydroponics_ws/src/esp32_firmware/src/: lighting.cpp  lighting.h  load_cell.cpp  load_cell.h  main.cpp  micro_ros_app.cpp  micro_ros_app.h  pumps.cpp  pumps.h  sensors.cpp  sensors.h  servo.cpp  servo.h  stepper.cpp  stepper.h  tmc2209.cpp  tmc2209.h
hydroponics_ws/src/future/: README.md
hydroponics_ws/src/future/hydroponics_bt/: package.xml
hydroponics_ws/src/future/hydroponics_harvest/: package.xml
hydroponics_ws/src/future/hydroponics_transport/: CMakeLists.txt
hydroponics_ws/src/future/hydroponics_transport/src/: transport_controller.cpp
hydroponics_ws/src/future/hydroponics_work_station/: CMakeLists.txt
hydroponics_ws/src/future/hydroponics_work_station/config/: work_station_params.yaml
hydroponics_ws/src/future/hydroponics_work_station/src/: work_station_controller.cpp
hydroponics_ws/src/hydroponics_bringup/: CMakeLists.txt  package.xml
hydroponics_ws/src/hydroponics_bringup/config/: diagnostic_rules.yaml  plant_library.yaml  system_config.yaml  v01_system.yaml
hydroponics_ws/src/hydroponics_bringup/config/plant_profiles/: basil.yaml  cilantro.yaml  mint.yaml  parsley.yaml
hydroponics_ws/src/hydroponics_bringup/launch/: full_system.launch.py  nutrient_test.launch.py  simulation.launch.py  transport_test.launch.py  v01_single_plant.launch.py  vision_test.launch.py  work_station_test.launch.py
hydroponics_ws/src/hydroponics_bringup/urdf/: hydroponics_module.urdf.xacro
hydroponics_ws/src/hydroponics_bt/: CMakeLists.txt
hydroponics_ws/src/hydroponics_bt/include/hydroponics_bt/: bt_ros_utils.hpp
hydroponics_ws/src/hydroponics_bt/src/bt_nodes/: harvest_nodes.cpp  nutrient_nodes.cpp  transport_nodes.cpp  work_station_nodes.cpp
hydroponics_ws/src/hydroponics_dashboard/: package-lock.json  package.xml  setup.py
hydroponics_ws/src/hydroponics_dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
hydroponics_ws/src/hydroponics_dashboard/frontend/src/: App.jsx  index.css
hydroponics_ws/src/hydroponics_dashboard/frontend/src/components/: AlertPanel.jsx  BehaviorTreeStatus.jsx  ChannelOverview.jsx  FallingLeaves.jsx  GrowthCurves.jsx  HomePage.jsx  InspectionViewer.jsx  NutrientHistory.jsx  PlantProfileEditor.jsx  SensorGauges.jsx  SystemControls.jsx  YieldAnalytics.jsx
hydroponics_ws/src/hydroponics_dashboard/hydroponics_dashboard/: api_routes.py  app.py  auth.py  ros_bridge.py
hydroponics_ws/src/hydroponics_data/: package.xml  setup.py
hydroponics_ws/src/hydroponics_data/config/: economics.yaml
hydroponics_ws/src/hydroponics_data/hydroponics_data/: data_pipeline.py  database.py  growth_analytics.py  yield_economics.py
hydroponics_ws/src/hydroponics_data/migrations/: 001_initial_schema.sql
hydroponics_ws/src/hydroponics_diagnostics/: package.xml  setup.py
hydroponics_ws/src/hydroponics_diagnostics/hydroponics_diagnostics/: plant_health_analyzer_node.py
hydroponics_ws/src/hydroponics_dosing/: package.xml  setup.py
hydroponics_ws/src/hydroponics_dosing/hydroponics_dosing/: dosing_node.py
hydroponics_ws/src/hydroponics_harvest/: setup.py
hydroponics_ws/src/hydroponics_led/: package.xml  setup.py
hydroponics_ws/src/hydroponics_lighting/: package.xml  setup.py
hydroponics_ws/src/hydroponics_lighting/hydroponics_lighting/: light_controller.py
hydroponics_ws/src/hydroponics_micro_ros_bridge/: CMakeLists.txt  package.xml
hydroponics_ws/src/hydroponics_micro_ros_bridge/src/: micro_ros_bridge.cpp
hydroponics_ws/src/hydroponics_mocks/: package.xml  setup.py
hydroponics_ws/src/hydroponics_mocks/hydroponics_mocks/: __init__.py  mock_cameras.py  mock_esp32.py
hydroponics_ws/src/hydroponics_mqtt/: package.xml  setup.py
hydroponics_ws/src/hydroponics_mqtt/config/: mqtt_config.yaml
hydroponics_ws/src/hydroponics_msgs/: CMakeLists.txt  package.xml
hydroponics_ws/src/hydroponics_msgs/action/: ExecuteHarvest.action  MoveZ.action  TransportTo.action
hydroponics_ws/src/hydroponics_msgs/msg/: BehaviorTreeStatus.msg  ChannelHealthSummary.msg  DiagnosticReport.msg  DosingEvent.msg  GrowthDataPoint.msg  HarvestAction.msg  HarvestPlan.msg  HarvestResult.msg  InspectionResult.msg  LightStatus.msg  NDVIAlert.msg  NDVIReading.msg  NutrientStatus.msg  PlantMeasurement.msg  PlantPositionState.msg  PlantStatus.msg  ProbeReading.msg  SystemAlert.msg  TopOffEvent.msg  TransportStatus.msg  WaterLevel.msg  YieldMetrics.msg
hydroponics_ws/src/hydroponics_msgs/srv/: ForceDose.srv  GetPlantHistory.srv  GetWorkStationStatus.srv  GetYieldAnalytics.srv  ResetCropCycle.srv  SetGrowLightIntensity.srv  SetGrowthStage.srv  SetProbeInterval.srv  TriggerInspection.srv
hydroponics_ws/src/hydroponics_nutrients/: package.xml  setup.py
hydroponics_ws/src/hydroponics_probe/: package.xml  setup.py
hydroponics_ws/src/hydroponics_probe/hydroponics_probe/: aeration_node.py  probe_arm_node.py
hydroponics_ws/src/hydroponics_transport/: package.xml
hydroponics_ws/src/hydroponics_transport/config/: transport_params.yaml
hydroponics_ws/src/hydroponics_vision/: package.xml  setup.py
hydroponics_ws/src/hydroponics_vision/config/: vision_params.yaml
hydroponics_ws/src/hydroponics_vision/hydroponics_vision/: camera_manager.py  deficiency_classifier.py  plant_measurer.py  plant_vision_node.py  vision_node.py  yolo_inference.py
hydroponics_ws/src/hydroponics_water/: package.xml  setup.py
hydroponics_ws/src/hydroponics_work_station/: package.xml
training/: README.md  collect_training_data.py  dataset_config.yaml  train_yolo.py
website inspo/: imgres.htm
(+22 files in other folders)
