<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hydroponics_lighting</name>
  <version>1.0.0</version>
  <description>Lighting controller for grow panel and inspection LEDs with schedule management</description>
  <maintainer email="developer@claudroponics.local">Claudroponics Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>hydroponics_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
