<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hydroponics_micro_ros_bridge</name>
  <version>1.0.0</version>
  <description>Manages serial USB communication with ESP32 via micro-ROS agent</description>
  <maintainer email="developer@claudroponics.local">Claudroponics Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>hydroponics_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
